tests/toy/neg/001159_mutation.toylang
program a = { int a : bool; } .
